# ur5e_surface_printing_ros2

./: .gitignore
paths/: generate_hemisphere_ring.py  hemisphere_ring_start_00.csv  hemisphere_ring_start_01.csv  hemisphere_ring_start_02.csv  hemisphere_ring_start_03.csv  hemisphere_ring_start_04.csv  hemisphere_ring_start_05.csv  hemisphere_ring_start_06.csv  hemisphere_ring_start_07.csv  hemisphere_ring_start_08.csv  hemisphere_ring_start_09.csv
src/ur5e_moveit_cpp/: CMakeLists.txt  package.xml
src/ur5e_moveit_cpp/config/: kinematics.yaml
src/ur5e_moveit_cpp/data/toolpaths/: front_raster.csv
src/ur5e_moveit_cpp/src/: add_box_only.cpp  analyze_trajectory.cpp  collision_aware_candidate_planner.cpp  collision_object_demo.cpp  compare_pose_candidates.cpp  hemisphere_surface_demo.cpp  parameterized_shape_adder.cpp  plan_only_trajectory.cpp  remove_all_objects.cpp  save_trajectory_csv.cpp  simple_joint_motion.cpp  simple_pose_motion.cpp  visualize_surface_toolpath.cpp
src/ur5e_probe_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5e_probe_moveit_config/config/: initial_positions.yaml  kinematics.yaml  ur5e_with_probe_mock.ros2_control.xacro  ur5e_with_probe_mock.srdf  ur5e_with_probe_mock.urdf.xacro
src/ur5e_probe_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ur5e_toolheads/: package.xml  setup.cfg  setup.py
src/ur5e_toolheads/launch/: view_probe.launch.py
src/ur5e_toolheads/meshes/: e-Series_UR5e_Probe.stl
src/ur5e_toolheads/urdf/: mock_ros2_control.xacro  probe_tool.xacro  ur5e_with_probe.urdf.xacro  ur5e_with_probe_mock.urdf.xacro
